2011-10-20	The InnoDB Team

	* btr/brt0cur.c:
	Fix Bug#13116045 Compilation failure using GCC 4.6.1 in btr/btr0cur.c

2011-10-12	The InnoDB Team

	* btr/btr0cur.c, btr/btr0sea.c, buf/buf0buf.c, buf/buf0lru.c,
	ha/ha0ha.c, handler/ha_innodb.cc, ibuf/ibuf0ibuf.c, include/btr0sea.h,
	include/btr0types.h, include/buf0buf.h, include/ha0ha.h,
	include/ha0ha.ic, include/row0upd.ic, include/sync0sync.h,
	page/page0page.c, sync/sync0sync.c:
	Fix Bug#13006367 62487: innodb takes 3 minutes to clean up
	the adaptive hash index at shutdown

2011-10-04	The InnoDB Team

	* include/sync0rw.h, sync/sync0rw.c:
	Fix Bug#13034534 RQG TESTS FAIL ON WINDOWS WITH CRASH NEAR
	RW_LOCK_DEBUG_PRINT

2011-09-20	The InnoDB Team

	* row/row0purge.c:
	Fix Bug#12963823 CRASH IN PURGE THREAD UNDER UNUSUAL CIRCUMSTANCES

2011-09-12	The InnoDB Team

	* row/row0sel.c:
	Fix Bug#12601439 CONSISTENT READ FAILURE IN COLUMN PREFIX INDEX

2011-09-08	The InnoDB Team

	* btr/btr0cur.c, include/page0page.h, include/row0upd.ic:
	Fix Bug#12948130 UNNECESSARY X-LOCKING OF ADAPTIVE HASH INDEX

2011-09-06	The InnoDB Team

	* buf/buf0buddy.c:
	Fix Bug#12950803 62294: BUF_BUDDY_RELOCATE CALLS GETTIMEOFDAY
	WHILE HOLDING BUFFER POOL MUTEX

2011-09-06	The InnoDB Team

	* include/trx0undo.h, trx/trx0rec.c, trx/trx0undo.c:
	Fix Bug#12547647 UPDATE LOGGING COULD EXCEED LOG PAGE SIZE

2011-08-29	The InnoDB Team

	* btr/btr0btr.c, btr/btr0cur.c, fsp/fsp0fsp.c,
	include/btr0btr.h, include/btr0cur.h, include/fsp0fsp.h,
	include/mtr0mtr.h, include/mtr0mtr.ic, mtr/mtr0mtr.c,
	row/row0ins.c, row/row0row.c, row/row0upd.c, trx/trx0undo.c:
	Fix Bug#12704861 Corruption after a crash during BLOB update
	and other regressions from the fix of Bug#12612184

2011-08-15	The InnoDB Team

	* btr/btr0btr.c, btr/btr0cur.c, btr/btr0pcur.c, btr/btr0sea.c,
	dict/dict0crea.c, dict/dict0dict.c, ibuf/ibuf0ibuf.c,
	include/btr0btr.h, include/btr0btr.ic, include/sync0sync.h,
	sync/sync0sync.c: